--- a/Medias_DMO/app/src/main/res/values/strings.xml
+++ b/Medias_DMO/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Medias_DMO</string>
     <string name="Calcular_Media">Calcular Media</string>
+    <string name="Calcular_MediaHarmonica">Calcular Media</string>
     <string name="hint_valor1">Digite Valor1</string>
     <string name="hint_valor_2">valor_2</string>
     <string name="hint_valor2">Digite valor2</string>
@@ -8,7 +9,8 @@
     <string name="hint_valor4">Digite valor4</string>
     <string name="hint_valor5">Digite valor_5</string>
 
-    <string name="msg_Calculomedia_sucess"> Media</string>
+    <string name="msg_Calculomedia_sucess"> Media Aritimetica</string>
+    <string name="msg_CalculoHarmonica_sucess"> Media Harmonica</string>
     <string name="msg_Calculomedia_erro">Erro. insira todos valores</string>
 
 
