--- a/Medias_DMO/app/src/main/res/values/strings.xml
+++ b/Medias_DMO/app/src/main/res/values/strings.xml
@@ -1,17 +1,24 @@
 <resources>
     <string name="app_name">Medias_DMO</string>
     <string name="Calcular_Media">Calcular Media</string>
+    <string name="Calcular_MediaA">Aritimetica</string>
+    <string name="Calcular_MediaH">Harmonica</string>
+    <string name="Calcular_MediaP">Ponderada</string>
     <string name="Calcular_MediaHarmonica">Calcular Media</string>
-    <string name="hint_valor1">Digite Valor1</string>
-    <string name="hint_valor_2">valor_2</string>
-    <string name="hint_valor2">Digite valor2</string>
-    <string name="hint_valor3">Digite valor3</string>
-    <string name="hint_valor4">Digite valor4</string>
-    <string name="hint_valor5">Digite valor_5</string>
+    <string name="hint_valor">Digite Valor</string>
+    <string name="hint_peso">Digite Peso</string>
+    <string name="num1">valo 1</string>
+    <string name="num2">valo 2</string>
+    <string name="num3">valo 3</string>
+    <string name="num4">valo 4</string>
+    <string name="num5">valo 5</string>
+    <string name="resul">resul</string>
+
 
     <string name="msg_Calculomedia_sucess"> Media Aritimetica</string>
     <string name="msg_CalculoHarmonica_sucess"> Media Harmonica</string>
+    <string name="msg_CalculoPonderada_sucess"> Media Ponderada</string>
     <string name="msg_Calculomedia_erro">Erro. insira todos valores</string>
-
+    <string name="view_background_change">Alterar cor do fundo</string>
 
 </resources>
